Fix search bar css when window collapse

--- a/app/assets/stylesheets/components/home.css
+++ b/app/assets/stylesheets/components/home.css
@@ -26,7 +26,7 @@
   /* flex-direction: column; */
   /* justify-content: space-around; */
   /* align-items: flex-end; */
-  /* padding: 20px; */
+  padding-top: 20px;
 }
 
 .stocks-dashboard-container {
