--- a/app/assets/stylesheets/components/search_bar.css
+++ b/app/assets/stylesheets/components/search_bar.css
@@ -5,18 +5,13 @@
   background-color: var(--bg);
 }
 .search-bar-container {
-  /* margin-left: 40px; */
-  width: 600px;
+  width: 450px;
   display: flex;
   flex-direction: column;
   position: fixed;
-  /* left: 2%;
-  top: 50%; */
-  /* transform: translate(-50%, -50%); */
   z-index: 999;
-  left: 25%;
-  top: 2%;
-  /* border: 1px solid black; */
+  left: 450px;
+  top: 1.75%;
   box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.01),
               0 1px 10px rgba(0, 0, 0, 0.6);
   border-radius: 4px;
