--- a/app/assets/stylesheets/components/splash.css
+++ b/app/assets/stylesheets/components/splash.css
@@ -1,8 +1,11 @@
+.splash-main {
+  height: 100vh;
+}
 .splash-container-1 {
   background:  rgb(35,205,153);
   display: flex;
   justify-content: space-evenly;
-  margin-top: 60px;
+  margin-top: 75px;
   height: 620px;
   min-height: 600px;
   width: 100%;
